# gitautopush

./: LICENSE  README.md  pyproject.toml  setup.py
gitautopush/: __init__.py  gitautopush.py
